# sts2-ai-mcp

./: .gitignore  README.md
.github/: CONTRIBUTING.md  pull_request_template.md
STS2AIAgent/: STS2AIAgent.json  mod_manifest.json
STS2AIAgent/Game/: DecisionWindowService.cs  GameActionService.cs  GameStateService.cs
STS2AIAgent/Server/: GameEventService.cs  Router.cs
STS2AIMCP/: ModEntry.cs  STS2AIMCP.csproj  STS2AIMCP.json  mod_manifest.json
STS2AIMCP/Game/: ActionTraceService.cs  CardSelectionAdapter.cs  DecisionWindowService.cs  GameActionService.cs  GameStateService.cs  GameThread.cs
STS2AIMCP/Server/: ApiException.cs  GameEventService.cs  HttpServer.cs  JsonHelper.cs  Router.cs
docs/: ai-mcp-v2-api.md  ai-mcp-v2-design.md  ai-mcp-v2-implementation-plan.md  building.md  compatibility.md  release.md  workshop.md
mcp_server/: README.md  REMOTE.md  pyproject.toml
mcp_server/data/: README.md
mcp_server/src/sts2_mcp/: __init__.py  client.py  game_data.py  network_server.py  reasoning.py  reasoning_cli.py  server.py
mcp_server/tests/: TEST.md  test_character_selection.py  test_game_data_tools.py  test_manual_driver_batch.py  test_mod_card_preview_contract.py  test_mod_end_turn_contract.py  test_reasoning.py  test_reasoning_cli.py  test_runtime_contract.py  test_v2_profile.py  test_versioned_game_data.py  test_waits.py
scripts/: build-mod.ps1  build-mod.sh  package-release.ps1  package-release.sh  package-workshop.ps1  serve-sts2-network-mcp.ps1  sts2_mcp_manual_driver.py  sync-game-data.py
tools/pck_builder/: project.godot
(+6 files in other folders)
