[project]
name = "sts2-ai-mcp"
version = "0.1.5"
description = "AI-safe FastMCP wrapper for the local Slay the Spire 2 mod"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
]

[project.scripts]
sts2-mcp-server = "sts2_mcp.server:main"
sts2-network-mcp-server = "sts2_mcp.network_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sts2_mcp"]

[tool.uv]
package = true
